2011-04-20  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/genders.c :
	  ISO C doesn't allow missing middle operand in conditional
	  expression. Replace x ?: y with x ? x : y.

2011-04-19  Mark Grondona <mgrondona@llnl.gov>

	* scripts/dshbak :
	  Fix for missing commas in header output (issue 19).

	* tests/t5000-dshbak.sh :
	  Add test to ensure commas appear in dshbak output (issue 19).

	* configure.ac, configure :
	  Append -Wl,-E to LDFLAGS on HP-UX (Issue 18).

2011-04-03  Mark Grondona <mgrondona@llnl.gov>

	* tests/t2001-ssh.sh:
	  Use random() function instead of bash's $RANDOM.
	  Replace {..} with seq(1).

	* tests/test-lib.sh :
	  Add prereq checks for seq(1) and expr(1), and add a
	  somewhat portable random() function for random number
	  generation.

	* tests/t5000-dshbak.sh :
	  Fix another case where dshbak -d test on non-writable dir
	  would erroneously fail. (Issue 11).

2011-04-01  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/execcmd.c :
	  Fix interactive dsh with exec. Instead of trying to split
	  the cmdline entered in interactive mode internally within
	  pdsh, the exec module will pass the command as a string
	  to sh -c.

	* tests/t2000-exec.sh :
	  Add a few simple exec module specific tests.

	* src/modules/sscmd.c :
	  Fix interactive dsh with ssh. (Issue 14)

	* tests/t2001-ssh.sh :
	  Add test for issue 14: interactive mode broken with ssh.

2011-03-09  Mark Grondona <mgrondona@llnl.gov>

	* : tag pdsh-2.25.

2011-03-08  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/sshcmd.c :
	  Fix pdcp when used with ssh. (Issue 12)

	* tests/t2001-ssh.sh :
	  Add some simple ssh tests.

2011-03-05  Mark Grondona <mgrondona@llnl.gov>

	* tests/test-lib.sh :
	  Check ownership of pdsh binary and build directory and complain
	  and exit with error if they are different.

2011-03-04  Mark Grondona <mgrondona@llnl.gov>

	* tests/t0004-module-loading.sh, tests/t0006-pdcp.sh :